--- a/popup.css
+++ b/popup.css
@@ -8,21 +8,24 @@ body {
 #score {
     text-align: center;
     padding: 20px;
-    font-size: 18px;
+    font-size: 36px;
+    background-color: #c0e8d5; /* Light green background color */
+    border-radius: 10px; /* Rounded corners for the score background */
 }
 
 .product-container {
-    border: 2px solid #000; /* You can customize the border style here */
+    border: 2px solid #000;
     padding: 10px;
     margin: 5px 0;
-    background-color: #f0f0f0; /* Background color for each product container */
+    background-color: #f0f0f0;
+    border-radius: 10px; /* Rounded corners for product containers */
 }
 
 #surveyForm {
     max-width: 400px;
     margin: 0 auto;
     padding: 20px;
-    background-color: #f0f0f0;
+    background-color: #c0e8d5; /* Light green background color */
     border-radius: 10px;
     margin-top: 20px;
 }
